# Lua-Study

./: CMakeLists.txt  build.sh  docment
code/: corTest.lua  main.cpp
lua-5.3.5/: lua
test/: test_cout.cpp
